# Asheville-Atmosphere

./: .env  docker-compose.yaml  package-lock.json  package.json
app/(tabs)/: LayoutWrapper.tsx  _layout.tsx  about.tsx  index.tsx
backend/: .flake8  Dockerfile  auth.py  config.py  pyproject.toml  schemas.py  server.py
backend/models/: __init__.py  base.py  comment.py  users.py
backend/scripts/: check.sh  fix.sh
database/: Dockerfile
ui/: .env  .env.bak  README.md  api.js  app.json  package-lock.json  package.json  storage.ts
ui/api/: authFetch.ts  comments.ts
ui/app/: _layout.tsx
ui/app/(auth)/: login.tsx  register.tsx
ui/app/(tabs)/: LayoutWrapper.tsx  _layout.tsx  about.tsx  index.tsx
ui/components/: BulletinCommentForm.tsx
ui/scripts/: update-env-ip.sh
